@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+<!-- filename:      test.xml=20
+     created on:    2001 Jun 14 01:44:46 +0200 (CEST)
+     last modified: 2001 Jun 14 01:44:57 +0200 (CEST)
+     (c) 2001 by Goetz Bock <bock@blacknet.de>
+     -->
+<test />
