@@ -1,3 +1,10 @@
+Thu Jun 14 10:07:59 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
+
+	* libxslt/preproc.c: removed a warning on xsl:transform
+	* tests/docs/Makefile.am tests/docs/array.xml tests/general/Makefile.am
+	  tests/general/array.out tests/general/array.xsl: added a new
+	  test fround in xsl-dev
+
 Wed Jun 13 23:12:57 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
 
 	* tests/docbook/result/html/*.html tests/XSLTMark/xslbench[12].out
